@@ -22,4 +22,31 @@ describe LogStash::Event do
     @event.fields["foo"] = ["one", "two", "three"]
     assert_equal(@event.fields["foo"].join(","), @event.sprintf("%{foo}"))
   end # sprintf testing
+
+  test "sprintf should not error when a token does not exist" do
+    assert_equal("%{foo}", @event.sprintf("%{foo}"))
+    assert_equal("%{foo.bar}", @event.sprintf("%{foo.bar}"))
+  end
+
+  test "sprintf should look inside hashes" do
+    @event.fields["foo"] = {"bar" => "a", "baz" => "b"}
+    assert_equal(@event.fields["foo"]["bar"], @event.sprintf("%{foo.bar}"))
+    assert_equal(@event.fields["foo"]["baz"], @event.sprintf("%{foo.baz}"))
+  end
+
+  test "sprintf should be able to look >1 hash deep" do
+    @event.fields["foo"] = {"bar" => {"baz" => "a"}}
+    assert_equal(@event.fields["foo"]["bar"]["baz"],
+                 @event.sprintf("%{foo.bar.baz}"))
+  end
+
+  test "sprintf should handle a failed hash lookup on a non-hash" do
+    @event.fields["foo"] = "test"
+    assert_equal("%{foo.bar}", @event.sprintf("%{foo.bar}"))
+  end
+
+  test "sprintf should find top-level keys with '.' if no data structure exists" do
+    @event.fields["foo.bar"] = "test"
+    assert_equal(@event.fields["foo.bar"], @event.sprintf("%{foo.bar}"))
+  end
 end # describe LogStash::Event
